# canyon

./: .biomeignore  .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .gitmodules  1.json  2.json  AGENTS.md  BIOME_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCS.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  README-zh_CN.md  README.md  SECURITY.md  TODO.md  TRANSLATIONS.md  biome.json  collect.Dockerfile  commitlint.config.mjs  cursor.md  data-source.ts  eslint.config.js  eslint.config.mjs  find-image.sh  find_large_files.sh  git.mjs  go.mod  go.sum  j.json  jest.config.json  main.go  main.ts  (+17 more)
.cargo/: config.toml
.github/workflows/: @canyonjs-plugin-babel-publish.yml  babel-npm-publish.yml  babel-plugin-canyon-publish.yml  biome.yml  build-canyon-cli.yml  build-uploader.yml  canyon-build-test.yml  canyon-data.yml  canyonjs-cli-publish.yml  canyonjs-plugin-babel-publish.yml  canyonjs-report-publish.yml  canyonjs-report-spa.yml  ci.yml  create-release.yml  docker-build-image-collect.yml  docker-build-image.yml  docker-build-push.yml  docker-image.yml  e2e-test.yml  examples-webpack-babel-ts.yml  generate-package-lock.yml  get-changed-lines.yml  npm-publish-canyon-ui.yml  npm-publish.yml  publish-babel-plugin-canyon.yml  publish-canyon-core.yml  publish-canyon-data.yml  publish-canyon-data2.yml  publish-canyon-library-istanbul-coverage.yml  publish-canyon-map.yml  publish-canyon-report.yml  publish-canyon-report18.yml  publish-canyon-reporter.yml  publish-canyon-sdk.yml  publish-canyon-test.yml  publish-canyon-ui.yml  publish-canyon-uploader.yml  publish-docker-image.yml  publish-npm-canyon-report.yml  publish-npm.yml  (+13 more)
api/: .env.example  README.md  package.json  schema.sql  tsconfig.json
api/prisma/: schema.prisma
api/src/: index.ts
app/: .gitignore  AGENTS.md  README.md  antd-theme-provider.tsx  copyPrismaEngines.ts  globals.css  layout.tsx  package.json  page.tsx  playwright.config.ts  schema.delta.sql  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/api/: NOTE.md  package.json  快照.md
app/e2e/: baseTest.ts  projects.spec.ts
app/locales/: cn.json  en.json  ja.json
app/prisma/: add_diff_created_at.sql  del.sql  import-infra.sql  schema-sqlite.prisma  schema.prisma
app/projects/: page.tsx
app/public/: login.html
app/scripts/: clean.mjs  seed-mock-repos.mjs  seed-mock-users.mjs  sync-catalog.mjs
app/src/: App.tsx  index.css  main.tsx  useWorker.ts  vite-env.d.ts
app/web/: package.json
architecture/: core.md
components/repos/: CommitDetailClient.tsx  CommitsClient.tsx  RepoTabs.tsx
conf/: app.ini  application.yml
dao/repo/: index.ts  repo.ts
docker/: nginx.conf
docker/canyon/: Dockerfile  README.md
docker/kafka-test/: README.md
docs/: .gitignore  README.md  agent.md  next.config.mjs  package.json  rspress.config.ts  schema.prisma
docs/app/: layout.jsx  styles.css
docs/components/: ApiDocs.jsx  setup-react-playwright-python.mdx  setup-react-playwright.mdx
docs/content/: _meta.js  api.mdx  index.mdx
docs/public/: api.html
docs/scripts/: build-llm-docs.ts
examples/: .gitignore  README.md  package.json  pnpm-workspace.yaml
examples/c8-nestjs/: README.md  package.json
examples/canyon-reporter-jest/: jest.config.js  package.json  sum.js  sum.test.js
examples/canyon-reporter-mocha/: package.json  ride.js
examples/canyon-reporter-test-runner/: package.json  ride.js  sum.test.js
examples/canyon-reporter-vitest/: my.test.js  package.json  vitest.config.ts
examples/config/: coverage.json
examples/e2e-playwright/: .gitignore  package.json
examples/instrument-rspeedy/: AGENTS.md  lynx.config.ts  package.json  tsconfig.json  tsconfig.node.json
examples/instrument-webpack-babel-ts/: babel.config.js  index.html  (+3 more)
lib/: prisma.ts
lite/: README.md  package.json
mock/: .gitignore  coverage.json  main.js  package.json  repo.json
model/: User.ts
models/: coverage-hit.mjs  custom_config.go  custom_config_dim.go  models.go
old-report/: package.json
playground/: package.json  pnpm-workspace.yaml
plugins/: TODO.md
plugins/swc-plugin/: .swcrc  Cargo.toml  README.md  package.json
plugins/swc-plugin-canyon/: .gitignore  .swcrc  Cargo.toml  README.md  coverageData.json  file.js  output.js  package.json
plugins/swc-plugin-canyon/features/: jian.js
plugins/swc-plugin-canyon/src/: lib.rs  main.rs
plugins/swc-plugin-stage-output/: .gitignore  .swcrc  Cargo.toml  README.md  package.json
plugins/swc-plugin-stage-output/features/: jian.js
plugins/swc-plugin-stage-output/src/: lib.rs
plugins/swc-plugin/features/: add.js
plugins/swc-plugin/src/: instrument_filter.rs  lib.rs
prisma/: config.json  schema.prisma  test.sql
report/: .gitignore  README.md  index.html  package.json  vite.config.ts
routers/: router.go
scripts/: check.js  check.mjs  clean.mjs  merge-coverage.mjs  move-build-products.js  move-build-products.mjs  prisma.mjs  rm.js  setup-env.mjs  update-idea-excludes.mjs  updateReact18.mjs
spa/: package.json  vite.config.ts
src/: app.controller.ts  app.module.ts  main.ts
template/: package.json
templates/: .gitkeep  .gitmodules.example  README.md  add-submodule.sh  templates.json
testfn/: sum.test.js
todo/: todo.md
tools/agent/: Cargo.toml
tools/agent/src/: lib.rs  main.rs
tools/agent/tests/: api_test.rs
tools/canyon-uploader/: .gitignore  Cargo.toml  README.md  package.json  rolldown.config.js  rolldown.config.ts  test-server.js
tools/canyon-uploader/.canyon_output/: coverage-0.2750710596742696.json  coverage-0.3017020077487451.json
tools/canyon-uploader/src/: main.rs  main.ts
tools/canyon-uploader/src/commands/: hit.ts  map.ts
tools/uploader/: .gitignore  Cargo.toml  README.md
tools/uploader/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  merge.rs  uploader.rs
utils/: index.ts  prepareInit.ts
validation/: user.ts
website/: Dockerfile  README.md  git.mjs  index.html  mdx-components.js  middleware.js  next.config.mjs  package.json  railway.toml  rspress.config.ts  server.js  vercel.json
(+947 files in other folders)
