[workspace]
members  = [
#    "plugins/swc-plugin-canyon",
    "tools/uploader"
]

[workspace.package]
authors      = ["Travis Zhang <https://github.com/travzhang>"]
edition    = "2021"
license    = "MIT"
homepage     = "https://github.com/canyon-project/canyon"
repository = "https://github.com/canyon-project/canyon.git"