[package]

description = "Canyon plugin for debugging."


authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
name         = "swc_plugin_canyon"
publish      = false
repository   = { workspace = true }
rust-version = { workspace = true }
version      = "0.18.4"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { workspace = true, features = ["ecma_plugin_transform"] }
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
