[package]

description = "Canyon PLugin"


authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
name         = "swc_plugin_canyon"
publish      = false
version      = "0.0.1"


[dependencies]
