[package]

description = "Canyon Uploader"


authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
name         = "canyon_uploader"
publish      = false
version      = "0.0.1"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json","native-tls-vendored"] }
tokio = { version = "1", features = ["full"]}
chrono = "0.4.38"
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.25"
