[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json","native-tls-vendored"] }
tokio = { version = "1", features = ["full"]}
chrono = "0.4.38"
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.25"
